removing references to /apps/

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   xmlns:skos="http://www.w3.org/2004/02/skos/core#"
   xmlns:xsd="http://www.w3.org/2001/XMLSchema#">
 
-<!-- Mirrored from localhost/apps/ by HTTrack Website Copier/3.x [XR&CO'2013], Wed, 03 Feb 2016 11:10:55 GMT -->
+<!-- Mirrored from localhosthttp://code.waag.org/AppsForEurope/ by HTTrack Website Copier/3.x [XR&CO'2013], Wed, 03 Feb 2016 11:10:55 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset="utf-8" />
@@ -72,7 +72,7 @@
 jQuery.extend(Drupal.settings, {"basePath":"\/apps\/","pathPrefix":"","ajaxPageState":{"theme":"responsive_blog","theme_token":"R66WsecUegOntfVtpZeOZ4x7PHXsE4gAYA4H310ZNGk","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"profiles\/openoutreach\/modules\/contrib\/comment_notify\/comment_notify.js":1,"profiles\/openoutreach\/modules\/contrib\/admin_menu\/admin_devel\/admin_devel.js":1,"sites\/all\/themes\/responsive_blog\/js\/jquery.cycle.all.min.js":1,"sites\/all\/themes\/responsive_blog\/js\/slide.js":1,"sites\/all\/themes\/responsive_blog\/js\/countdown.js":1,"sites\/all\/themes\/responsive_blog\/js\/main-menu.js":1,"sites\/all\/themes\/responsive_blog\/js\/pngfix.min.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"profiles\/openoutreach\/modules\/contrib\/comment_notify\/comment_notify.css":1,"sites\/all\/modules\/simplenews\/simplenews.css":1,"modules\/book\/book.css":1,"profiles\/openoutreach\/modules\/contrib\/calendar\/css\/calendar_multiday.css":1,"modules\/comment\/comment.css":1,"profiles\/openoutreach\/modules\/contrib\/date\/date_api\/date.css":1,"profiles\/openoutreach\/modules\/contrib\/date\/date_popup\/themes\/datepicker.1.7.css":1,"profiles\/openoutreach\/modules\/contrib\/date\/date_repeat_field\/date_repeat_field.css":1,"modules\/field\/theme\/field.css":1,"profiles\/openoutreach\/modules\/contrib\/logintoboggan\/logintoboggan.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"profiles\/openoutreach\/modules\/contrib\/views\/css\/views.css":1,"profiles\/openoutreach\/modules\/contrib\/ctools\/css\/ctools.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_article\/debut_article.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_blog\/debut_blog.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_event\/debut_event.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_highlighted\/debut_highlighted.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_link\/debut_link.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_section\/debut_section.css":1,"profiles\/openoutreach\/modules\/contrib\/panels\/css\/panels.css":1,"sites\/default\/files\/css\/follow.css":1,"profiles\/openoutreach\/modules\/contrib\/forward\/forward.css":1,"sites\/all\/themes\/responsive_blog\/css\/dark.css":1,"sites\/all\/themes\/responsive_blog\/style.css":1}},"jcarousel":{"ajaxPath":"\/apps\/jcarousel\/ajax\/views"}});
 //--><!]]>
 </script>
-<!--[if lt IE 9]><script src="/apps/sites/all/themes/responsive_blog/js/html5.js"></script><![endif]-->
+<!--[if lt IE 9]><script src="http://code.waag.org/AppsForEurope/sites/all/themes/responsive_blog/js/html5.js"></script><![endif]-->
 <link href='../../fonts.googleapis.com/css72e5.css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 </head>
 <body class="html front not-logged-in no-sidebars page-node white">
@@ -356,5 +356,5 @@ jQuery.extend(Drupal.settings, {"basePath":"\/apps\/","pathPrefix":"","ajaxPageS
 
   </body>
 
-<!-- Mirrored from localhost/apps/ by HTTrack Website Copier/3.x [XR&CO'2013], Wed, 03 Feb 2016 11:11:28 GMT -->
+<!-- Mirrored from localhosthttp://code.waag.org/AppsForEurope/ by HTTrack Website Copier/3.x [XR&CO'2013], Wed, 03 Feb 2016 11:11:28 GMT -->
 </html>
