correct suffix files

--- a/index.html
+++ b/index.html
@@ -21,52 +21,52 @@
   
 <title>Apps for Europe | turning data into business</title>
 <style type="text/css" media="all">
-@import url("modules/system/system.basea212.css?nixmys");
-@import url("modules/system/system.menusa212.css?nixmys");
-@import url("modules/system/system.messagesa212.css?nixmys");
-@import url("modules/system/system.themea212.css?nixmys");
+@import url("modules/system/system.base.css?nixmys");
+@import url("modules/system/system.menus.css?nixmys");
+@import url("modules/system/system.messages.css?nixmys");
+@import url("modules/system/system.theme.css?nixmys");
 </style>
 <style type="text/css" media="all">
-@import url("profiles/openoutreach/modules/contrib/comment_notify/comment_notifya212.css?nixmys");
-@import url("sites/all/modules/simplenews/simplenewsa212.css?nixmys");
-@import url("modules/book/booka212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/calendar/css/calendar_multidaya212.css?nixmys");
-@import url("modules/comment/commenta212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/date/date_api/datea212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/date/date_popup/themes/datepicker.1.7a212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/date/date_repeat_field/date_repeat_fielda212.css?nixmys");
-@import url("modules/field/theme/fielda212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/logintoboggan/logintoboggana212.css?nixmys");
-@import url("modules/node/nodea212.css?nixmys");
-@import url("modules/search/searcha212.css?nixmys");
-@import url("modules/user/usera212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/views/css/viewsa212.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/comment_notify/comment_notify.css?nixmys");
+@import url("sites/all/modules/simplenews/simplenews.css?nixmys");
+@import url("modules/book/book.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/calendar/css/calendar_multiday.css?nixmys");
+@import url("modules/comment/comment.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/date/date_api/date.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/date/date_popup/themes/datepicker.1.7.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/date/date_repeat_field/date_repeat_field.css?nixmys");
+@import url("modules/field/theme/field.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/logintoboggan/logintoboggan.css?nixmys");
+@import url("modules/node/node.css?nixmys");
+@import url("modules/search/search.css?nixmys");
+@import url("modules/user/user.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/views/css/views.css?nixmys");
 </style>
 <style type="text/css" media="all">
-@import url("profiles/openoutreach/modules/contrib/ctools/css/ctoolsa212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/debut_article/debut_articlea212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/debut_blog/debut_bloga212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/debut_event/debut_eventa212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/debut_highlighted/debut_highlighteda212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/debut_link/debut_linka212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/debut_section/debut_sectiona212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/panels/css/panelsa212.css?nixmys");
-@import url("sites/default/files/css/followa212.css?nixmys");
-@import url("profiles/openoutreach/modules/contrib/forward/forwarda212.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/ctools/css/ctools.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/debut_article/debut_article.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/debut_blog/debut_blog.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/debut_event/debut_event.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/debut_highlighted/debut_highlighted.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/debut_link/debut_link.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/debut_section/debut_section.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/panels/css/panels.css?nixmys");
+@import url("sites/default/files/css/follow.css?nixmys");
+@import url("profiles/openoutreach/modules/contrib/forward/forward.css?nixmys");
 </style>
 <style type="text/css" media="all">
-@import url("sites/all/themes/responsive_blog/stylea212.css?nixmys");
+@import url("sites/all/themes/responsive_blog/style.css?nixmys");
 </style>
 <script type="text/javascript" src="misc/jquery1cc4.js?v=1.4.4"></script>
 <script type="text/javascript" src="misc/jquery.once7839.js?v=1.2"></script>
-<script type="text/javascript" src="misc/drupala212.js?nixmys"></script>
-<script type="text/javascript" src="profiles/openoutreach/modules/contrib/comment_notify/comment_notifya212.js?nixmys"></script>
-<script type="text/javascript" src="profiles/openoutreach/modules/contrib/admin_menu/admin_devel/admin_devela212.js?nixmys"></script>
-<script type="text/javascript" src="sites/all/themes/responsive_blog/js/jquery.cycle.all.mina212.js?nixmys"></script>
-<script type="text/javascript" src="sites/all/themes/responsive_blog/js/slidea212.js?nixmys"></script>
-<script type="text/javascript" src="sites/all/themes/responsive_blog/js/countdowna212.js?nixmys"></script>
-<script type="text/javascript" src="sites/all/themes/responsive_blog/js/main-menua212.js?nixmys"></script>
-<script type="text/javascript" src="sites/all/themes/responsive_blog/js/pngfix.mina212.js?nixmys"></script>
+<script type="text/javascript" src="misc/drupal.js?nixmys"></script>
+<script type="text/javascript" src="profiles/openoutreach/modules/contrib/comment_notify/comment_notify.js?nixmys"></script>
+<script type="text/javascript" src="profiles/openoutreach/modules/contrib/admin_menu/admin_devel/admin_devel.js?nixmys"></script>
+<script type="text/javascript" src="sites/all/themes/responsive_blog/js/jquery.cycle.all.min.js?nixmys"></script>
+<script type="text/javascript" src="sites/all/themes/responsive_blog/js/slide.js?nixmys"></script>
+<script type="text/javascript" src="sites/all/themes/responsive_blog/js/countdown.js?nixmys"></script>
+<script type="text/javascript" src="sites/all/themes/responsive_blog/js/main-menu.js?nixmys"></script>
+<script type="text/javascript" src="sites/all/themes/responsive_blog/js/pngfix.min.js?nixmys"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/apps\/","pathPrefix":"","ajaxPageState":{"theme":"responsive_blog","theme_token":"R66WsecUegOntfVtpZeOZ4x7PHXsE4gAYA4H310ZNGk","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"profiles\/openoutreach\/modules\/contrib\/comment_notify\/comment_notify.js":1,"profiles\/openoutreach\/modules\/contrib\/admin_menu\/admin_devel\/admin_devel.js":1,"sites\/all\/themes\/responsive_blog\/js\/jquery.cycle.all.min.js":1,"sites\/all\/themes\/responsive_blog\/js\/slide.js":1,"sites\/all\/themes\/responsive_blog\/js\/countdown.js":1,"sites\/all\/themes\/responsive_blog\/js\/main-menu.js":1,"sites\/all\/themes\/responsive_blog\/js\/pngfix.min.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"profiles\/openoutreach\/modules\/contrib\/comment_notify\/comment_notify.css":1,"sites\/all\/modules\/simplenews\/simplenews.css":1,"modules\/book\/book.css":1,"profiles\/openoutreach\/modules\/contrib\/calendar\/css\/calendar_multiday.css":1,"modules\/comment\/comment.css":1,"profiles\/openoutreach\/modules\/contrib\/date\/date_api\/date.css":1,"profiles\/openoutreach\/modules\/contrib\/date\/date_popup\/themes\/datepicker.1.7.css":1,"profiles\/openoutreach\/modules\/contrib\/date\/date_repeat_field\/date_repeat_field.css":1,"modules\/field\/theme\/field.css":1,"profiles\/openoutreach\/modules\/contrib\/logintoboggan\/logintoboggan.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"profiles\/openoutreach\/modules\/contrib\/views\/css\/views.css":1,"profiles\/openoutreach\/modules\/contrib\/ctools\/css\/ctools.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_article\/debut_article.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_blog\/debut_blog.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_event\/debut_event.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_highlighted\/debut_highlighted.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_link\/debut_link.css":1,"profiles\/openoutreach\/modules\/contrib\/debut_section\/debut_section.css":1,"profiles\/openoutreach\/modules\/contrib\/panels\/css\/panels.css":1,"sites\/default\/files\/css\/follow.css":1,"profiles\/openoutreach\/modules\/contrib\/forward\/forward.css":1,"sites\/all\/themes\/responsive_blog\/css\/dark.css":1,"sites\/all\/themes\/responsive_blog\/style.css":1}},"jcarousel":{"ajaxPath":"\/apps\/jcarousel\/ajax\/views"}});
