--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <script type="text/javascript" src="sites/all/themes/responsive_blog/js/main-menu.js?nixmys"></script>
 <script type="text/javascript" src="sites/all/themes/responsive_blog/js/pngfix.min.js?nixmys"></script>
 <!--[if lt IE 9]><script src="http://code.waag.org/AppsForEurope/sites/all/themes/responsive_blog/js/html5.js"></script><![endif]-->
-<link href='../../fonts.googleapis.com/css72e5.css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css72e5.css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 </head>
 <body class="html front not-logged-in no-sidebars page-node white">
     <!-- have a footer outside of the page http://ryanfait.com/sticky-footer/ -->
@@ -145,7 +145,7 @@
 			 
 			<div id="win" style="">
 				
-				<a href="../competition.html">
+				<a href="competition.html">
 					<div style="">
 						<p>Join our online <strong>competition</strong>, deadline 31 December</p>
 						<!-- <script type="application/javascript">
@@ -204,7 +204,7 @@
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../../www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-55168849-1', 'auto');
   ga('send', 'pageview');
@@ -283,7 +283,7 @@
 	<div id="mission-container" style="float:left;width:100%;">
 		<div class="wrapper">
 			<div class="wrapped" id="mission"> 
-				<p>Apps for Europe is a <a href="../about-us.html">support network</a> with a mission to turn data based apps into viable businesses. By implementing <a href="../business-lounge.html">Business Lounges</a>  at local app contests and hack events across the continent, Apps for Europe is accelerating the relationship between developers and investors. The culmination of these events is an International Business Lounge at <a href="http://futureeverything.org/"> Future Everything</a> where the best apps, either invited after a local Business Lounge, or selected from our <a href="../competition.html">online competition</a>, will have the opportunity to pitch their idea to win investment for the future development of their product.</p>
+				<p>Apps for Europe is a <a href="about-us.html">support network</a> with a mission to turn data based apps into viable businesses. By implementing <a href="business-lounge.html">Business Lounges</a>  at local app contests and hack events across the continent, Apps for Europe is accelerating the relationship between developers and investors. The culmination of these events is an International Business Lounge at <a href="http://futureeverything.org/"> Future Everything</a> where the best apps, either invited after a local Business Lounge, or selected from our <a href="competition.html">online competition</a>, will have the opportunity to pitch their idea to win investment for the future development of their product.</p>
  
 				<!--Apps for Europe is a support network that provides tools to transform ideas for data based apps into viable businesses. We bring a powerful European network of individuals and organisations who have been involved in open data programmes and in supporting promising ideas to help ideas to scale. -->
 			</div>
@@ -351,5 +351,5 @@
 
   </body>
 
-<!-- Mirrored from localhosthttp://code.waag.org/AppsForEurope/ by HTTrack Website Copier/3.x [XR&CO'2013], Wed, 03 Feb 2016 11:11:28 GMT -->
+<!-- Mirrored by HTTrack Website Copier/3.x [XR&CO'2013], Wed, 03 Feb 2016 11:11:28 GMT -->
 </html>
