fixed wrong css and google font urls

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <style type="text/css" media="all">
 @import url("sites/all/themes/responsive_blog/style.css?nixmys");
 </style>
-<script type="text/javascript" src="misc/jquery1cc4.js?v=1.4.4"></script>
-<script type="text/javascript" src="misc/jquery.once7839.js?v=1.2"></script>
+<script type="text/javascript" src="misc/jquery.js?v=1.4.4"></script>
+<script type="text/javascript" src="misc/jquery.once.js?v=1.2"></script>
 <script type="text/javascript" src="misc/drupal.js?nixmys"></script>
 <script type="text/javascript" src="profiles/openoutreach/modules/contrib/comment_notify/comment_notify.js?nixmys"></script>
 <script type="text/javascript" src="profiles/openoutreach/modules/contrib/admin_menu/admin_devel/admin_devel.js?nixmys"></script>
@@ -68,7 +68,7 @@
 <script type="text/javascript" src="sites/all/themes/responsive_blog/js/main-menu.js?nixmys"></script>
 <script type="text/javascript" src="sites/all/themes/responsive_blog/js/pngfix.min.js?nixmys"></script>
 <!--[if lt IE 9]><script src="http://code.waag.org/AppsForEurope/sites/all/themes/responsive_blog/js/html5.js"></script><![endif]-->
-<link href='http://fonts.googleapis.com/css72e5.css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 </head>
 <body class="html front not-logged-in no-sidebars page-node white">
     <!-- have a footer outside of the page http://ryanfait.com/sticky-footer/ -->
