Fixed root paths

--- a/blog.html
+++ b/blog.html
@@ -139,7 +139,7 @@
 			 
 			<div id="win" style="">
 				
-				<a href="/competition">
+				<a href="http://code.waag.org/AppsForEuropecompetition">
 					<div style="">
 						<p>Join our online <strong>competition</strong>, deadline 31 December</p>
 						<!-- <script type="application/javascript">
@@ -272,7 +272,7 @@
 <div><a href="http://code.waag.org/AppsForEurope/article/bikecityguide">Last year&#39;s winner BikeCityGuide.org</a> has shown the potential of using open data to enhance their company and expand their services. Since the international Business Lounge at Future Everything last year they were able to reach new cities and raise almost 140.000,- in crowdfunding. A true success story!</div>
 <div>&nbsp;</div>
 <div><img alt="" src="http://extern.waag.org/ivonne/a4eu/a4eu-symbol-small.png" style="height: 25px; width: 25px; border: 0px; padding: 0px;" />&nbsp;<a href="http://code.waag.org/AppsForEurope/competition">Enter your app and join our competition</a></div>
-<div><img alt="" src="http://extern.waag.org/ivonne/a4eu/a4eu-symbol-small.png" style="height: 25px; width: 25px; border: 0px; padding: 0px;" />&nbsp;<a href="/open-data-events-upcoming">Participate in a local Business Lounge to present your idea and find support and investment&nbsp;</a><br /><img alt="" src="http://extern.waag.org/ivonne/a4eu/a4eu-symbol-small.png" style="height: 25px; width: 25px; border: 0px; padding: 0px;" />&nbsp;<a href="/competition_dates">Get an overview of all important competition dates and deadline</a><br />&nbsp;</div>
+<div><img alt="" src="http://extern.waag.org/ivonne/a4eu/a4eu-symbol-small.png" style="height: 25px; width: 25px; border: 0px; padding: 0px;" />&nbsp;<a href="http://code.waag.org/AppsForEurope/open-data-events-upcoming">Participate in a local Business Lounge to present your idea and find support and investment&nbsp;</a><br /><img alt="" src="http://extern.waag.org/ivonne/a4eu/a4eu-symbol-small.png" style="height: 25px; width: 25px; border: 0px; padding: 0px;" />&nbsp;<a href="http://code.waag.org/AppsForEurope/competition_dates">Get an overview of all important competition dates and deadline</a><br />&nbsp;</div>
 <div>&nbsp;</div>
 <div>Over the past years many local, regional and national app competitions in Europe have been organized to stimulated developers and companies to build new applications with open data. Apps for Europe has taken it to the next level. By adding Business Lounges to local events we introduce the world of open data development to that of investors, accelerators, incubators and more.</div>
 <div>&nbsp;</div>
