--- a/competition_dates.html
+++ b/competition_dates.html
@@ -138,7 +138,7 @@
 			 
 			<div id="win" style="">
 				
-				<a href="/competition">
+				<a href="http://code.waag.org/AppsForEurope/competition">
 					<div style="">
 						<p>Join our online <strong>competition</strong>, deadline 31 December</p>
 						<!-- <script type="application/javascript">
@@ -242,7 +242,7 @@
 <tr>
 <td style="border: 0px currentColor; border-image: none;"><img alt="" src="http://extern.waag.org/ivonne/a4eu/a4eu-symbol-small.png" style="padding: 0px; border: 0px currentColor; border-image: none; width: 25px; height: 25px;" /></td>
 <td style="border: 0px currentColor; border-image: none;">September - February:</td>
-<td style="border: 0px currentColor; border-image: none;"><a href="/open-data-events-upcoming">Several Business Lounges will be organized throughout Europe</a></td>
+<td style="border: 0px currentColor; border-image: none;"><a href="http://code.waag.org/AppsForEurope/open-data-events-upcoming">Several Business Lounges will be organized throughout Europe</a></td>
 <td style="border: 0px currentColor; border-image: none;">&nbsp;</td>
 </tr>
 <tr>
