--- a/competition_enter.html
+++ b/competition_enter.html
@@ -138,7 +138,7 @@
 			 
 			<div id="win" style="">
 				
-				<a href="/competition">
+				<a href="http://code.waag.org/AppsForEurope/competition">
 					<div style="">
 						<p>Join our online <strong>competition</strong>, deadline 31 December</p>
 						<!-- <script type="application/javascript">
@@ -233,7 +233,7 @@
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><img alt="" src="http://extern.waag.org/ivonne/a4eu/Laptops.jpg" style="padding: 0px; border: 0px currentColor; border-image: none;" /></p>
 <h2>Selection criteria</h2>
 <ul>
-<li>The application must use at least one open data source that originates in Europe. Combinations with other data sources are allowed.&nbsp;Look at the <a href="/resources">resource section of our website</a> to find more information on how to find open data sources in Europe.</li>
+<li>The application must use at least one open data source that originates in Europe. Combinations with other data sources are allowed.&nbsp;Look at the <a href="http://code.waag.org/AppsForEurope/resources">resource section of our website</a> to find more information on how to find open data sources in Europe.</li>
 <li>Only fully filled out entry forms will be taken into consideration.</li>
 <li>The competition is open to all applications (web, phone, pad, Facebook etc.).</li>
 <li>You can participate individually or as a team. In the latter case, the prize will be awarded to the team leader.&nbsp;</li>
@@ -251,7 +251,7 @@
 <li>Potential social value and market,&nbsp;<em>what are you contributing to the improvement of society</em></li>
 <li>Usability &amp; user friendliness of the app,&nbsp;<em>is your application easy to use</em></li>
 </ul>
-<p><em><img alt="" src="http://extern.waag.org/ivonne/a4eu/a4eu-symbol-small.png" style="padding: 0px; border: 0px currentColor; border-image: none; width: 25px; height: 25px;" /></em><a href="/competition_dates">Get an overview of all important competition dates and deadline</a></p>
+<p><em><img alt="" src="http://extern.waag.org/ivonne/a4eu/a4eu-symbol-small.png" style="padding: 0px; border: 0px currentColor; border-image: none; width: 25px; height: 25px;" /></em><a href="http://code.waag.org/AppsForEurope/competition_dates">Get an overview of all important competition dates and deadline</a></p>
 </div></div></div><div class="field field-name-field-tags field-type-taxonomy-term-reference field-label-inline clearfix"><div class="field-label">Tags:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="http://code.waag.org/AppsForEurope/tags/enter" typeof="skos:Concept" property="rdfs:label skos:prefLabel" datatype="">enter</a></div><div class="field-item odd"><a href="http://code.waag.org/AppsForEurope/tags/competition" typeof="skos:Concept" property="rdfs:label skos:prefLabel" datatype="">competition</a></div></div></div>  </div>
 
       <footer>
