--- a/open-data-events-participate.html
+++ b/open-data-events-participate.html
@@ -139,7 +139,7 @@
 			 
 			<div id="win" style="">
 				
-				<a href="/competition">
+				<a href="http://code.waag.org/AppsForEurope/competition">
 					<div style="">
 						<p>Join our online <strong>competition</strong>, deadline 31 December</p>
 						<!-- <script type="application/javascript">
@@ -233,18 +233,18 @@
   <div class="content">
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><img alt="" src="http://extern.waag.org/ivonne/a4eu/network.jpg" style="border: 0px; padding: 0px; " /><br />The Apps for Europe consortium welcomes new members in our network, to share experiences, knowledge and help show the value of open data. See the current members of our network <a href="http://code.waag.org/AppsForEurope/about-us">here</a>. You can join our network in several ways.</p>
 <h2>Join our meetups</h2>
-<p>Apps for Europe partners meetup several times a year during large events like the Open Knowledge Festival, FutureEverything etc. Look at the <a href="/open-data-events-upcoming">events calendar</a> to find the next meeting.</p>
+<p>Apps for Europe partners meetup several times a year during large events like the Open Knowledge Festival, FutureEverything etc. Look at the <a href="http://code.waag.org/AppsForEurope/open-data-events-upcoming">events calendar</a> to find the next meeting.</p>
 <h2>Letter of support</h2>
-<p>Do you support our goals? Let us know by signing our <i>letter of support</i>. This will help show the European Commission the importance of helping the open data community turn their ideas into viable business. <a href="mailto:info@localhost/apps">Contact us</a> for details.</p>
+<p>Do you support our goals? Let us know by signing our <i>letter of support</i>. This will help show the European Commission the importance of helping the open data community turn their ideas into viable business. <a href="mailto:ivonne@waag.org">Contact us</a> for details.</p>
 <h2>Join the thematic network</h2>
-<p>Our <a href="/about-us">consortium</a> invites organizations involved in open data events, competitions and hackathons to join our network and engage with other members.&nbsp;&nbsp;<a href="mailto:info@localhost/apps">Contact us</a>&nbsp;for details.</p>
+<p>Our <a href="http://code.waag.org/AppsForEurope/about-us">consortium</a> invites organizations involved in open data events, competitions and hackathons to join our network and engage with other members.&nbsp;&nbsp;<a href="mailto:info@localhost/apps">Contact us</a>&nbsp;for details.</p>
 </div></div></div><div class="field field-name-field-tags field-type-taxonomy-term-reference field-label-inline clearfix"><div class="field-label">Tags:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="http://code.waag.org/AppsForEurope/tags/participate" typeof="skos:Concept" property="rdfs:label skos:prefLabel" datatype="">participate</a></div><div class="field-item odd"><a href="http://code.waag.org/AppsForEurope/tags/event" typeof="skos:Concept" property="rdfs:label skos:prefLabel" datatype="">event</a></div></div></div>  </div>
 
       <footer>
       <ul class="links inline"><li class="service-links-facebook first"><a href="http://www.facebook.com/sharer.php?u=http%3A//localhosthttp://code.waag.org/AppsForEurope/open-data-events-participate&amp;t=Join%20our%20network" title="Share on Facebook" class="service-links-facebook" rel="nofollow">Facebook</a></li>
 <li class="service-links-twitter"><a href="http://twitter.com/share?url=http%3A//localhosthttp://code.waag.org/AppsForEurope/open-data-events-participate&amp;text=Join%20our%20network" title="Share this on Twitter" class="service-links-twitter" rel="nofollow">Twitter</a></li>
 <li class="comment_forbidden"><span><a href="http://code.waag.org/AppsForEurope/user/login?destination=comment/reply/48%23comment-form">Log in</a> to post comments</span></li>
-<li class="forward_link last"><a href="http://code.waag.org/AppsForEurope/forward?path=node/48" title="Forward this page to a friend" class="forward-page">Email this page</a></li>
+<li class="forward_link last"><a href="http://code.waag.org/AppsForEurope/forward?path=open-data-events-participate.html" title="Forward this page to a friend" class="forward-page">Email this page</a></li>
 </ul>    </footer>
   
     </div>
