--- a/content/tell-us-about-your-event.html
+++ b/content/tell-us-about-your-event.html
@@ -141,7 +141,7 @@
 			 
 			<div id="win" style="">
 				
-				<a href="/competition">
+				<a href="http://code.waag.org/AppsForEurope/competition">
 					<div style="">
 						<p>Join our online <strong>competition</strong>, deadline 31 December</p>
 						<!-- <script type="application/javascript">
