Correct mailto address

--- a/article/futureeverything-2015.html
+++ b/article/futureeverything-2015.html
@@ -235,7 +235,7 @@
 <p>FutureEverything is 20! Tickets for the 2015 FutureEverything Conference are <a href="http://futureeverything.org/festival/" target="_blank">on sale now.</a> On February 26-28th the 20th anniversary is taking place, bringing artists, designers, city makers, activists, technologists and business people together for a two day conference in Manchester&rsquo;s stunning Town Hall. The programme will feature inspiring talks from internationally renowned speakers, plus numerous participatory workshops, debates and sessions.</p>
 <h2>Apps for Europe international Business Lounge</h2>
 <p>During FutureEverything 2015 Apps for Europe will host her second international business lounge, bringing together open data startups, investors, NGO&#39;s, accelerators and experts throughout Europe. There they will have the opportunity to share knowlegde, ideas and experiences and hopefully new partners for collaboration in the future.</p>
-<p>Want to join our event? Contact us at <a href="http://mailto:info@localhost/apps">info@localhost/apps</a> and we will tell you all about your opportunities.</p>
+<p>Want to join our event? Contact us at <a href="mailto:ivonne@waag.org">ivonne@waag.org</a> and we will tell you all about your opportunities.</p>
 </div></div></div>  </div>
 
       <footer>
