--- a/competition.html
+++ b/competition.html
@@ -253,7 +253,7 @@
 <h2>About Apps for Europe?</h2>
 <p>Apps for Europe is a support network with a mission to turn data based apps into viable businesses. For further information about our consortium have a look <a href="http://code.waag.org/AppsForEurope/about-us"><font color="#1982d1">here</font></a>.</p>
 <h2>Can&#39;t find what you&#39;re looking for?</h2>
-<p>Email: <a href="mailto:info@localhost/apps">info@localhost/apps</a> and we&#39;ll help you.</p>
+<p>Email: <a href="mailto:ivonne@waag.org">ivonne@waag.org</a> and we&#39;ll help you.</p>
 </div></div></div>  </div>
 
       <footer>
