--- a/open-data-events-participate.html
+++ b/open-data-events-participate.html
@@ -237,7 +237,7 @@
 <h2>Letter of support</h2>
 <p>Do you support our goals? Let us know by signing our <i>letter of support</i>. This will help show the European Commission the importance of helping the open data community turn their ideas into viable business. <a href="mailto:ivonne@waag.org">Contact us</a> for details.</p>
 <h2>Join the thematic network</h2>
-<p>Our <a href="http://code.waag.org/AppsForEurope/about-us">consortium</a> invites organizations involved in open data events, competitions and hackathons to join our network and engage with other members.&nbsp;&nbsp;<a href="mailto:info@localhost/apps">Contact us</a>&nbsp;for details.</p>
+<p>Our <a href="http://code.waag.org/AppsForEurope/about-us">consortium</a> invites organizations involved in open data events, competitions and hackathons to join our network and engage with other members.&nbsp;&nbsp;<a href="mailto:ivonne@waag.org">Contact us</a>&nbsp;for details.</p>
 </div></div></div><div class="field field-name-field-tags field-type-taxonomy-term-reference field-label-inline clearfix"><div class="field-label">Tags:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="http://code.waag.org/AppsForEurope/tags/participate" typeof="skos:Concept" property="rdfs:label skos:prefLabel" datatype="">participate</a></div><div class="field-item odd"><a href="http://code.waag.org/AppsForEurope/tags/event" typeof="skos:Concept" property="rdfs:label skos:prefLabel" datatype="">event</a></div></div></div>  </div>
 
       <footer>
