fix missing blog

--- a/about-us.html
+++ b/about-us.html
@@ -185,7 +185,7 @@
 </ul></li>
 <li class="expanded"><a href="article/results-2013" title="Events and finalists from the 2013/2014 competition">Results 2013</a><ul class="menu"><li class="first last collapsed"><a href="article/finalists-20132014">Finalists 2013/14</a></li>
 </ul></li>
-<li class="leaf"><a href="blog" title="View a listing of blog posts.">Blog</a></li>
+<li class="leaf"><a href="blog.html" title="View a listing of blog posts.">Blog</a></li>
 <li class="leaf"><a href="resources">Resources</a></li>
 <li class="last collapsed"><a href="about-us" class="active">About Us</a></li>
 </ul>	  </div>
