--- a/article/results-2013.html
+++ b/article/results-2013.html
@@ -186,7 +186,7 @@
 </ul></li>
 <li class="expanded"><a href="http://code.waag.org/AppsForEurope/article/results-2013" title="Events and finalists from the 2013/2014 competition" class="active">Results 2013</a><ul class="menu"><li class="first last collapsed"><a href="http://code.waag.org/AppsForEurope/article/finalists-20132014">Finalists 2013/14</a></li>
 </ul></li>
-<li class="leaf"><a href="http://code.waag.org/AppsForEurope/blog" title="View a listing of blog posts.">Blog</a></li>
+<li class="leaf"><a href="http://code.waag.org/AppsForEurope/blog.html" title="View a listing of blog posts.">Blog</a></li>
 <li class="leaf"><a href="http://code.waag.org/AppsForEurope/resources">Resources</a></li>
 <li class="last collapsed"><a href="http://code.waag.org/AppsForEurope/about-us">About Us</a></li>
 </ul>	  </div>
